# dictionary

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
data/: distinct.py  merge.py  normalizer.py  words.csv
data/all/: extra.csv  words.txt
data/raw_text/: longman-communication-3000.txt  opted.txt
docs/: commands.md  document.md  flags.md  patterns.md  settings.md
include/: app.hpp  bk_node.hpp  bk_tree.hpp  dictionary.hpp  trie_node.hpp  trie_tree.hpp  utility.hpp  word.hpp
src/: app.cpp  bk_node.cpp  bk_tree.cpp  dictionary.cpp  main.cpp  trie_node.cpp  trie_tree.cpp  utility.cpp  word.cpp
tests/: test_bk_node.cpp  test_bk_tree.cpp  test_dictionary.cpp  test_trie_node.cpp  test_trie_tree.cpp  test_word.cpp
